WIP got trench detection and wrap_diagnostics working on dask. Had to explicitly import skimage.morphology, set holoviews backend in any plotting code before calling .options. There might be a cleaner way to do this, not clear if the user can override the backend and set it to matplotlib the way I hard-wired bokeh in now. Additionally, still trying to get module reloading on dask workers for easy development.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
@@ -14,7 +14,6 @@ cython = "*"
 dask = {extras = ["complete"]}
 distributed = "*"
 ipywidgets = "*"
-"iso8601" = "*"
 ujson = "*"
 jupyter = "*"
 jupyterlab = "*"
@@ -43,6 +42,19 @@ hide-code = "*"
 more-itertools = "*"
 tifffile = "*"
 deepdiff = "*"
+pendulum = "*"
+jdcal = "*"
+jq = "*"
+jmespath = "*"
+xxhash = "*"
+"8ac6f2a" = {path = "/home/jqs1/projects/datashader", editable = true}
+scikit-image = "*"
+peakutils = "*"
+"1e22951" = {path = "/home/jqs1/projects/dask-jobqueue", editable = true}
+cvxpy = "*"
+picos = "*"
+pyomo = "*"
+"037fc10" = {path = "/home/jqs1/projects/dask", editable = true}
 
 [dev-packages]
 
