--- a/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
@@ -35,7 +35,6 @@ scipy = "*"
 streamz = "*"
 cytoolz = "*"
 tqdm = "*"
-qgrid = "*"
 xarray = "*"
 pandas = "*"
 more-itertools = "*"
@@ -60,6 +59,10 @@ wrapt = "*"
 colorama = "*"
 "4a8dedc" = {path = "./../pyviz_comms", editable = true}
 pyviz-comms = "*"
+"523475f" = {path = "./../parambokeh", editable = true}
+"925ab16" = {path = "./../qgrid", editable = true}
+notebook = "*"
+cachetools = "*"
 
 [dev-packages]
 
