--- a/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
@@ -70,6 +70,7 @@ pympler = "*"
 objgraph = "*"
 xdot = "*"
 qgrid = {editable = true, path = "./../hvplot"}
+async-timeout = "*"
 
 [dev-packages]
 
