After much pain, got mp4 exports of holomaps working. Very brittle.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
@@ -76,6 +76,7 @@ python-snappy = "*"
 pyarrow = {path = "/home/jqs1/software/arrow/python/dist/pyarrow-0.10.1.dev66+g3edfd7c-cp37-cp37m-linux_x86_64.whl"}
 snakeviz = {editable = true, path = "./../snakeviz"}
 qgrid = "*"
+imageio = "*"
 
 [dev-packages]
 
