--- a/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/Pipfile
@@ -61,6 +61,8 @@ filelock = "*"
 line-profiler = {git = "https://github.com/rkern/line_profiler.git"}
 snakeviz = {editable = true, path = "./../snakeviz"}
 memory-profiler = "*"
+nose = "*"
+pytest = "*"
 
 [dev-packages]
 
