Rename janelle to lab-helper, added first cut of group meeting scheduling utilities.

--- a/paulssonlab/src/paulssonlab/shenker/lab-helper/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/lab-helper/Pipfile
@@ -1,12 +1,9 @@
 [[source]]
-
 url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
-
 [packages]
-
 google-api-python-client = "*"
 ipython = "*"
 click = "*"
@@ -17,7 +14,8 @@ pendulum = "*"
 holoviews = "*"
 bokeh = "*"
 matplotlib = "*"
-
+jupyterlab = "*"
+"google-auth-httplib2" = "*"
+google-auth-oauthlib = "*"
 
 [dev-packages]
-
