First cut of photobleaching viewer UI with datashading traces.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
@@ -24,6 +24,11 @@ cytoolz = "*"
 pandas = "*"
 tornado = "==5.1.1"
 numpy-indexed = "*"
+statsmodels = "*"
+datashader = "*"
+xarray = "*"
+panel = "*"
+param = "*"
 
 [dev-packages]
 
