Segmentation WIP. Tracking down nd2reader bug: wrong frame order when reading multi-position fast time lapse datasets.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
@@ -29,6 +29,8 @@ datashader = "*"
 xarray = "*"
 panel = "*"
 param = "*"
+matriarch = {editable = true, path = "./../matriarch"}
+cachetools = "*"
 
 [dev-packages]
 
