Refactored into .py files, fixed segmentation (now uses same as matriarch trench segmentation with different frangi parameters.)

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
@@ -31,6 +31,8 @@ panel = "*"
 param = "*"
 matriarch = {editable = true, path = "./../matriarch"}
 cachetools = "*"
+cython = "*"
+"51e6b7d" = {editable = true, path = "./../scikit-image"}
 
 [dev-packages]
 
