Checkpoint before switching away from dask arrays.

--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/Pipfile
@@ -33,6 +33,7 @@ matriarch = {editable = true, path = "./../matriarch"}
 cachetools = "*"
 cython = "*"
 "51e6b7d" = {editable = true, path = "./../scikit-image"}
+graphviz = "*"
 
 [dev-packages]
 
