--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/environment.yml
@@ -3,21 +3,32 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - arrow-cpp=0.13.0=py37h620436b_3
+  - asciitree=0.3.3=py_2
+  - asn1crypto=0.24.0=py37_1003
   - attrs=19.1.0=py_0
   - backcall=0.1.0=py_0
   - bleach=3.1.0=py_0
   - bokeh=1.1.0=py37_0
+  - boost-cpp=1.68.0=h11c811c_1000
+  - brotli=1.0.7=hf484d3e_1000
   - bzip2=1.0.6=h14c3975_1002
   - ca-certificates=2019.3.9=hecc5488_0
   - cachetools=3.1.0=py_0
   - certifi=2019.3.9=py37_0
+  - cffi=1.12.3=py37h8022711_0
+  - chardet=3.0.4=py37_1003
   - click=7.0=py_0
   - cloudpickle=1.0.0=py_0
+  - colorcet=2.0.1=py_0
+  - cryptography=2.6.1=py37h72c5cf5_0
   - cycler=0.10.0=py_1
   - cytoolz=0.9.0.1=py37h14c3975_1001
   - dask=1.2.2=py_0
   - dask-core=1.2.2=py_0
   - dask-jobqueue=0.4.1=py_0
+  - datashader=0.7.0=py_0
+  - datashape=0.5.4=py_1
   - dbus=1.13.6=he372182_0
   - decorator=4.4.0=py_0
   - defusedxml=0.5.0=py_1
@@ -25,16 +36,20 @@ dependencies:
   - docrep=0.2.5=py_0
   - entrypoints=0.3=py37_1000
   - expat=2.2.5=hf484d3e_1002
+  - fasteners=0.14.1=py_3
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.0=he983fc9_0
   - gettext=0.19.8.1=hc5be6a0_1002
+  - gflags=2.2.2=hf484d3e_1001
   - glib=2.58.3=hf63aee3_1001
+  - glog=0.4.0=he1b5a44_1
   - gst-plugins-base=1.14.4=hdf3bae2_1001
   - gstreamer=1.14.4=h66beb1c_1001
   - heapdict=1.0.0=py37_1000
   - holoviews=1.12.2=py_0
   - hvplot=0.4.0=py_1
   - icu=58.2=hf484d3e_1000
+  - idna=2.8=py37_1000
   - imageio=2.5.0=py37_0
   - ipykernel=5.1.0=py37h24bf2e0_1002
   - ipython=7.5.0=py37h24bf2e0_0
@@ -59,24 +74,31 @@ dependencies:
   - libiconv=1.15=h516909a_1005
   - liblapack=3.8.0=8_openblas
   - libpng=1.6.37=hed695b0_0
+  - libprotobuf=3.7.1=h8b12597_0
   - libsodium=1.0.16=h14c3975_1001
   - libstdcxx-ng=8.2.0=hdf63c60_1
   - libtiff=4.0.10=h648cc4a_1001
   - libuuid=2.32.1=h14c3975_1000
   - libxcb=1.13=h14c3975_1002
   - libxml2=2.9.9=h13577e0_0
+  - llvmlite=0.28.0=py37hdbcaa40_0
   - locket=0.2.0=py_2
+  - lz4-c=1.8.3=he1b5a44_1001
   - markupsafe=1.1.1=py37h14c3975_0
   - matplotlib=3.0.3=py37_1
   - matplotlib-base=3.0.3=py37h5f35d83_1
   - mistune=0.8.4=py37h14c3975_1000
+  - monotonic=1.5=py_0
   - msgpack-python=0.6.1=py37h6bb024c_0
+  - multipledispatch=0.6.0=py_0
   - nbconvert=5.5.0=py_0
   - nbformat=4.4.0=py_1
   - ncurses=6.1=hf484d3e_1002
   - networkx=2.3=py_0
   - nodejs=11.14.0=he1b5a44_1
   - notebook=5.7.8=py37_0
+  - numba=0.43.1=py37hf2d7682_0
+  - numcodecs=0.6.3=py37hf484d3e_0
   - numpy=1.16.3=py37he5ce36f_0
   - olefile=0.46=py_0
   - openblas=0.3.6=h6e990d7_1
@@ -86,6 +108,7 @@ dependencies:
   - pandoc=2.7.2=0
   - pandocfilters=1.4.2=py_1
   - param=1.9.0=py_0
+  - parquet-cpp=1.5.1=2
   - parso=0.4.0=py_0
   - partd=0.3.9=py_0
   - pcre=8.41=hf484d3e_1003
@@ -99,10 +122,16 @@ dependencies:
   - psutil=5.6.2=py37h516909a_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
+  - pyarrow=0.13.0=py37h0978efd_0
+  - pycparser=2.19=py37_1
+  - pyct=0.4.6=py_0
+  - pyct-core=0.4.6=py_0
   - pygments=2.4.0=py_0
+  - pyopenssl=19.0.0=py37_0
   - pyparsing=2.4.0=py_0
   - pyqt=5.9.2=py37hcca6a23_0
   - pyrsistent=0.15.1=py37h516909a_0
+  - pysocks=1.7.0=py37_0
   - python=3.7.3=h5b0a415_0
   - python-dateutil=2.8.0=py_0
   - pytz=2019.1=py_0
@@ -112,33 +141,48 @@ dependencies:
   - pyzmq=18.0.1=py37hc4ba49a_1
   - qt=5.9.7=h52cfd70_1
   - qtconsole=4.4.4=py_0
+  - re2=2019.04.01=he1b5a44_0
   - readline=7.0=hf8c457e_1001
+  - requests=2.22.0=py37_0
   - scikit-image=0.15.0=py37he1b5a44_0
   - scipy=1.2.1=py37h09a28d5_1
   - send2trash=1.5.0=py_0
   - setuptools=41.0.1=py37_0
   - sip=4.19.8=py37hf484d3e_1000
   - six=1.12.0=py37_1000
+  - snappy=1.1.7=hf484d3e_1002
   - sortedcontainers=2.1.0=py_0
   - sqlite=3.26.0=h67949de_1001
   - tblib=1.3.2=py_1
   - terminado=0.8.2=py37_0
   - testpath=0.4.2=py_1001
+  - thrift-cpp=0.12.0=h0a07b25_1002
   - tk=8.6.9=h84994c4_1001
   - toolz=0.9.0=py_1
   - tornado=6.0.2=py37h516909a_0
   - tqdm=4.31.1=py_0
   - traitlets=4.3.2=py37_1000
+  - urllib3=1.24.3=py37_0
   - wcwidth=0.1.7=py_1
   - webencodings=0.5.1=py_1
   - wheel=0.33.2=py37_0
   - widgetsnbextension=3.4.2=py37_1000
+  - wrapt=1.11.1=py37h516909a_0
+  - xarray=0.12.1=py_0
   - xorg-libxau=1.0.9=h14c3975_0
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xz=5.2.4=h14c3975_1001
   - yaml=0.1.7=h14c3975_1001
+  - zarr=2.3.1=py37_0
   - zeromq=4.3.1=hf484d3e_1000
   - zict=0.1.4=py_0
   - zlib=1.2.11=h14c3975_1004
-prefix: /home/jqs1/miniconda3/envs/molecule-counting
+  - zstd=1.3.3=1
+  - pip:
+    - future==0.17.1
+    - numpy-indexed==0.3.5
+    - pims==0.4.1
+    - slicerator==1.0.0
+    - xmltodict==0.12.0
+prefix: /home/nao5/miniconda3/envs/molecule-counting
 
