--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/environment.yml
@@ -1,5 +1,7 @@
 name: molecule-counting
 channels:
+  - holoviews/label/dev
+  - pyviz/label/dev
   - conda-forge
   - defaults
 dependencies:
@@ -32,13 +34,14 @@ dependencies:
   - dbus=1.13.6=he372182_0
   - decorator=4.4.0=py_0
   - defusedxml=0.5.0=py_1
-  - distributed=1.28.0=py37_0
+  - distributed=1.28.1=py37_0
   - docrep=0.2.5=py_0
   - entrypoints=0.3=py37_1000
   - expat=2.2.5=hf484d3e_1002
   - fasteners=0.14.1=py_3
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.0=he983fc9_0
+  - future=0.17.1=py37_1000
   - gettext=0.19.8.1=hc5be6a0_1002
   - gflags=2.2.2=hf484d3e_1001
   - glib=2.58.3=hf63aee3_1001
@@ -46,12 +49,12 @@ dependencies:
   - gst-plugins-base=1.14.4=hdf3bae2_1001
   - gstreamer=1.14.4=h66beb1c_1001
   - heapdict=1.0.0=py37_1000
-  - holoviews=1.12.2=py_0
-  - hvplot=0.4.0=py_1
+  - holoviews=1.12.3=py_0
+  - hvplot=0.4.0=py_0
   - icu=58.2=hf484d3e_1000
   - idna=2.8=py37_1000
   - imageio=2.5.0=py37_0
-  - ipykernel=5.1.0=py37h24bf2e0_1002
+  - ipykernel=5.1.1=py37h24bf2e0_0
   - ipython=7.5.0=py37h24bf2e0_0
   - ipython_genutils=0.2.0=py_1
   - ipywidgets=7.4.2=py_0
@@ -66,13 +69,14 @@ dependencies:
   - jupyterlab=0.35.6=py37_0
   - jupyterlab_server=0.2.0=py_0
   - kiwisolver=1.1.0=py37hc9558a2_0
-  - libblas=3.8.0=8_openblas
-  - libcblas=3.8.0=8_openblas
+  - libblas=3.8.0=10_openblas
+  - libcblas=3.8.0=10_openblas
   - libffi=3.2.1=he1b5a44_1006
+  - libgcc=7.2.0=h69d50b8_2
   - libgcc-ng=8.2.0=hdf63c60_1
   - libgfortran-ng=7.3.0=hdf63c60_0
   - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=8_openblas
+  - liblapack=3.8.0=10_openblas
   - libpng=1.6.37=hed695b0_0
   - libprotobuf=3.7.1=h8b12597_0
   - libsodium=1.0.16=h14c3975_1001
@@ -85,8 +89,8 @@ dependencies:
   - locket=0.2.0=py_2
   - lz4-c=1.8.3=he1b5a44_1001
   - markupsafe=1.1.1=py37h14c3975_0
-  - matplotlib=3.0.3=py37_1
-  - matplotlib-base=3.0.3=py37h5f35d83_1
+  - matplotlib=3.1.0=py37_0
+  - matplotlib-base=3.1.0=py37h5f35d83_0
   - mistune=0.8.4=py37h14c3975_1000
   - monotonic=1.5=py_0
   - msgpack-python=0.6.1=py37h6bb024c_0
@@ -95,19 +99,21 @@ dependencies:
   - nbformat=4.4.0=py_1
   - ncurses=6.1=hf484d3e_1002
   - networkx=2.3=py_0
-  - nodejs=11.14.0=he1b5a44_1
+  - nodejs=9.11.1=0
   - notebook=5.7.8=py37_0
   - numba=0.43.1=py37hf2d7682_0
   - numcodecs=0.6.3=py37hf484d3e_0
   - numpy=1.16.3=py37he5ce36f_0
+  - numpy-indexed=0.3.5=py_1
   - olefile=0.46=py_0
-  - openblas=0.3.6=h6e990d7_1
+  - openblas=0.3.6=h6e990d7_2
   - openssl=1.1.1b=h14c3975_1
   - packaging=19.0=py_0
   - pandas=0.24.2=py37hf484d3e_0
   - pandoc=2.7.2=0
   - pandocfilters=1.4.2=py_1
-  - param=1.9.0=py_0
+  - panel=0.1.0a14=py_0
+  - param=1.9.1a2=py_0
   - parquet-cpp=1.5.1=2
   - parso=0.4.0=py_0
   - partd=0.3.9=py_0
@@ -130,7 +136,7 @@ dependencies:
   - pyopenssl=19.0.0=py37_0
   - pyparsing=2.4.0=py_0
   - pyqt=5.9.2=py37hcca6a23_0
-  - pyrsistent=0.15.1=py37h516909a_0
+  - pyrsistent=0.15.2=py37h516909a_0
   - pysocks=1.7.0=py37_0
   - python=3.7.3=h5b0a415_0
   - python-dateutil=2.8.0=py_0
@@ -145,7 +151,7 @@ dependencies:
   - readline=7.0=hf8c457e_1001
   - requests=2.22.0=py37_0
   - scikit-image=0.15.0=py37he1b5a44_0
-  - scipy=1.2.1=py37h09a28d5_1
+  - scipy=1.3.0=py37hab63836_0
   - send2trash=1.5.0=py_0
   - setuptools=41.0.1=py37_0
   - sip=4.19.8=py37hf484d3e_1000
@@ -153,19 +159,19 @@ dependencies:
   - snappy=1.1.7=hf484d3e_1002
   - sortedcontainers=2.1.0=py_0
   - sqlite=3.26.0=h67949de_1001
-  - tblib=1.3.2=py_1
+  - tblib=1.4.0=py_0
   - terminado=0.8.2=py37_0
-  - testpath=0.4.2=py_1001
+  - testpath=0.3.1=py37_1
   - thrift-cpp=0.12.0=h0a07b25_1002
   - tk=8.6.9=h84994c4_1001
   - toolz=0.9.0=py_1
   - tornado=6.0.2=py37h516909a_0
-  - tqdm=4.31.1=py_0
+  - tqdm=4.32.1=py_0
   - traitlets=4.3.2=py37_1000
   - urllib3=1.24.3=py37_0
   - wcwidth=0.1.7=py_1
   - webencodings=0.5.1=py_1
-  - wheel=0.33.2=py37_0
+  - wheel=0.33.4=py37_0
   - widgetsnbextension=3.4.2=py37_1000
   - wrapt=1.11.1=py37h516909a_0
   - xarray=0.12.1=py_0
@@ -179,10 +185,8 @@ dependencies:
   - zlib=1.2.11=h14c3975_1004
   - zstd=1.3.3=1
   - pip:
-    - future==0.17.1
-    - numpy-indexed==0.3.5
     - pims==0.4.1
     - slicerator==1.0.0
     - xmltodict==0.12.0
-prefix: /home/nao5/miniconda3/envs/molecule-counting
+prefix: /home/jqs1/miniconda3/envs/molecule-counting
 
