--- a/paulssonlab/src/paulssonlab/shenker/matriarch/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/environment.yml
@@ -1,7 +1,8 @@
 name: matriarch
 channels:
-  - pyviz/label/dev
   - bokeh/channel/dev
+  - holoviews/label/dev
+  - pyviz/label/dev
   - conda-forge
   - defaults
 dependencies:
@@ -45,6 +46,7 @@ dependencies:
   - filelock=3.0.10=py_0
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.0=he983fc9_0
+  - future=0.17.1=py36_1000
   - futures-compat=1.0=py3_0
   - gettext=0.19.8.1=hc5be6a0_1002
   - gflags=2.2.2=hf484d3e_1001
@@ -95,6 +97,7 @@ dependencies:
   - markupsafe=1.1.1=py36h14c3975_0
   - matplotlib=3.0.3=py36_1
   - matplotlib-base=3.0.3=py36h5f35d83_1
+  - memory_profiler=0.55.0=py_0
   - mistune=0.8.4=py36h14c3975_1000
   - monotonic=1.5=py_0
   - msgpack-python=0.6.1=py36h6bb024c_0
@@ -108,6 +111,7 @@ dependencies:
   - numba=0.43.1=py36hf2d7682_0
   - numcodecs=0.6.3=py36hf484d3e_0
   - numpy=1.16.3=py36he5ce36f_0
+  - numpy-indexed=0.3.5=py_1
   - olefile=0.46=py_0
   - openblas=0.3.6=h6e990d7_1
   - openssl=1.1.1b=h14c3975_1
