--- a/paulssonlab/src/paulssonlab/shenker/fp-analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/fp-analysis/environment.yml
@@ -148,6 +148,7 @@ dependencies:
   - pysocks=1.6.8=py36_1002
   - python=3.6.7=h381d211_1004
   - python-dateutil=2.8.0=py_0
+  - python-lmdb=0.92=py36_0
   - pytz=2019.1=py_0
   - pyviz_comms=0.7.2=py_0
   - pywavelets=1.0.3=py36hd352d35_1
