--- a/paulssonlab/src/paulssonlab/shenker/fp-analysis/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/fp-analysis/environment.yml
@@ -1,26 +1,29 @@
 name: fp-analysis
 channels:
+  - http://conda.anaconda.org/gurobi
   - bokeh/channel/dev
   - holoviews/label/dev
   - pyviz/label/dev
   - conda-forge
   - defaults
 dependencies:
+  - appdirs=1.4.3=py_1
   - apsw=3.25.2.r1=py36h6b74fdf_1000
   - arrow-cpp=0.13.0=py36hfe0260e_2
   - asciitree=0.3.3=py_2
   - asn1crypto=0.24.0=py36_1003
   - attrs=19.1.0=py_0
   - backcall=0.1.0=py_0
+  - black=19.3b0=py_0
   - bleach=3.1.0=py_0
   - blosc=1.16.3=hf484d3e_0
   - bokeh=1.1.1dev3=py_0
   - boost-cpp=1.68.0=h11c811c_1000
   - brotli=1.0.7=hf484d3e_1000
   - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2019.3.9=hecc5488_0
+  - ca-certificates=2019.6.16=hecc5488_0
   - cachetools=3.1.0=py_0
-  - certifi=2019.3.9=py36_0
+  - certifi=2019.6.16=py36_0
   - cffi=1.12.3=py36h8022711_0
   - chardet=3.0.4=py36_1003
   - click=7.0=py_0
@@ -44,6 +47,7 @@ dependencies:
   - expat=2.2.5=hf484d3e_1002
   - fasteners=0.14.1=py_3
   - filelock=3.0.10=py_0
+  - flake8=3.7.7=py36_0
   - fontconfig=2.13.1=he4413a7_1000
   - freetype=2.10.0=he983fc9_0
   - future=0.17.1=py36_1000
@@ -72,6 +76,7 @@ dependencies:
   - jupyter_core=4.4.0=py_0
   - jupyterlab=0.35.6=py36_0
   - jupyterlab_server=0.2.0=py_0
+  - jupytext=1.1.6=0
   - kiwisolver=1.1.0=py36hc9558a2_0
   - libblas=3.8.0=8_openblas
   - libcblas=3.8.0=8_openblas
@@ -97,8 +102,10 @@ dependencies:
   - markupsafe=1.1.1=py36h14c3975_0
   - matplotlib=3.0.3=py36_1
   - matplotlib-base=3.0.3=py36h5f35d83_1
+  - mccabe=0.6.1=py_1
   - memory_profiler=0.55.0=py_0
   - mistune=0.8.4=py36h14c3975_1000
+  - mock=3.0.5=py36_0
   - monotonic=1.5=py_0
   - msgpack-python=0.6.1=py36h6bb024c_0
   - multipledispatch=0.6.0=py_0
@@ -137,9 +144,11 @@ dependencies:
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
   - pyarrow=0.13.0=py36h0978efd_0
+  - pycodestyle=2.5.0=py_0
   - pycparser=2.19=py36_1
   - pyct=0.4.6=py_0
   - pyct-core=0.4.6=py_0
+  - pyflakes=2.1.1=py_0
   - pygments=2.3.1=py_0
   - pyopenssl=19.0.0=py36_0
   - pyparsing=2.4.0=py_0
@@ -172,9 +181,11 @@ dependencies:
   - streamz=0.5.0=py_0
   - tblib=1.3.2=py_1
   - terminado=0.8.2=py36_0
+  - testfixtures=6.8.2=py_0
   - testpath=0.3.1=py36_1
   - thrift-cpp=0.12.0=h0a07b25_1002
   - tk=8.6.9=h84994c4_1001
+  - toml=0.10.0=py_0
   - toolz=0.9.0=py_1
   - tornado=6.0.2=py36h516909a_0
   - tqdm=4.31.1=py_0
@@ -201,4 +212,3 @@ dependencies:
     - slicerator==1.0.0
     - xmltodict==0.12.0
 prefix: /home/jqs1/miniconda3/envs/fp-analysis
-
