--- a/paulssonlab/src/paulssonlab/shenker/tracking/.pre-commit-config.yaml
+++ b/paulssonlab/src/paulssonlab/shenker/tracking/.pre-commit-config.yaml
@@ -1,6 +1,18 @@
 repos:
--   repo: https://github.com/python/black
-    rev: stable
+-   repo: local
     hooks:
     - id: black
-      language_version: python3.7
+      name: Format .py files
+      entry: black
+      language: system
+      types: [python]
+    - id: jupytext
+      name: Format .ipynb files
+      entry: jupytext --quiet --from ipynb --pipe black
+      language: system
+      files: \.ipynb$
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v2.2.3
+    hooks:
+    - id: check-merge-conflict
+    - id: end-of-file-fixer
