--- a/paulssonlab/src/paulssonlab/shenker/molecule-counting/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/molecule-counting/environment.yml
@@ -1,192 +1,250 @@
 name: molecule-counting
 channels:
-  - holoviews/label/dev
-  - pyviz/label/dev
+  - numba
+  - http://conda.anaconda.org/gurobi
+  - pyviz
   - conda-forge
   - defaults
 dependencies:
-  - arrow-cpp=0.13.0=py37h620436b_3
+  - _libgcc_mutex=0.1=main
+  - adal=1.2.2=py_0
+  - aiohttp=3.6.2=py36h516909a_0
+  - arrow-cpp=0.15.1=py36h982ac2c_5
   - asciitree=0.3.3=py_2
-  - asn1crypto=0.24.0=py37_1003
-  - attrs=19.1.0=py_0
+  - async-timeout=3.0.1=py_1000
+  - attrs=19.3.0=py_0
   - backcall=0.1.0=py_0
+  - beautifulsoup4=4.8.2=py36_0
   - bleach=3.1.0=py_0
-  - bokeh=1.1.0=py37_0
-  - boost-cpp=1.68.0=h11c811c_1000
-  - brotli=1.0.7=hf484d3e_1000
-  - bzip2=1.0.6=h14c3975_1002
-  - ca-certificates=2019.3.9=hecc5488_0
-  - cachetools=3.1.0=py_0
-  - certifi=2019.3.9=py37_0
-  - cffi=1.12.3=py37h8022711_0
-  - chardet=3.0.4=py37_1003
+  - blinker=1.4=py_1
+  - bokeh=1.4.0=py36_0
+  - boost-cpp=1.70.0=h8e57a91_2
+  - brotli=1.0.7=he1b5a44_1000
+  - bzip2=1.0.8=h516909a_2
+  - c-ares=1.15.0=h516909a_1001
+  - ca-certificates=2019.11.28=hecc5488_0
+  - cachetools=3.1.1=py_0
+  - certifi=2019.11.28=py36_0
+  - cffi=1.13.2=py36h8022711_0
+  - chardet=3.0.4=py36_1003
   - click=7.0=py_0
-  - cloudpickle=1.0.0=py_0
-  - colorcet=2.0.1=py_0
-  - cryptography=2.6.1=py37h72c5cf5_0
-  - cycler=0.10.0=py_1
-  - cytoolz=0.9.0.1=py37h14c3975_1001
-  - dask=1.2.2=py_0
-  - dask-core=1.2.2=py_0
-  - dask-jobqueue=0.4.1=py_0
-  - datashader=0.7.0=py_0
+  - cloudpickle=1.2.2=py_1
+  - colorcet=2.0.2=py_0
+  - conda=4.8.0=py36_1
+  - conda-build=3.18.11=py36_0
+  - conda-package-handling=1.6.0=py36h516909a_1
+  - cryptography=2.8=py36h72c5cf5_1
+  - cycler=0.10.0=py_2
+  - cytoolz=0.10.1=py36h516909a_0
+  - dask=2.9.1=py_0
+  - dask-core=2.9.1=py_0
+  - dask-jobqueue=0.7.0=py_0
+  - dask-kubernetes=0.10.0=py_0
+  - datashader=0.9.0=py_0
   - datashape=0.5.4=py_1
   - dbus=1.13.6=he372182_0
-  - decorator=4.4.0=py_0
-  - defusedxml=0.5.0=py_1
-  - distributed=1.28.1=py37_0
-  - docrep=0.2.5=py_0
-  - entrypoints=0.3=py37_1000
-  - expat=2.2.5=hf484d3e_1002
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - distributed=2.9.1=py_0
+  - double-conversion=3.1.5=he1b5a44_2
+  - entrypoints=0.3=py36_1000
+  - enum34=1.1.6=py36_1002
+  - expat=2.2.5=he1b5a44_1004
   - fasteners=0.14.1=py_3
-  - fontconfig=2.13.1=he4413a7_1000
-  - freetype=2.10.0=he983fc9_0
-  - future=0.17.1=py37_1000
+  - filelock=3.0.10=py_0
+  - fontconfig=2.13.1=h86ecdb6_1001
+  - freetype=2.10.0=he983fc9_1
+  - fsspec=0.6.2=py_0
+  - future=0.18.2=py36_0
   - gettext=0.19.8.1=hc5be6a0_1002
-  - gflags=2.2.2=hf484d3e_1001
-  - glib=2.58.3=hf63aee3_1001
+  - gflags=2.2.2=he1b5a44_1002
+  - glib=2.58.3=py36h6f030ca_1002
+  - glob2=0.7=py_0
   - glog=0.4.0=he1b5a44_1
-  - gst-plugins-base=1.14.4=hdf3bae2_1001
-  - gstreamer=1.14.4=h66beb1c_1001
-  - heapdict=1.0.0=py37_1000
-  - holoviews=1.12.3=py_0
-  - hvplot=0.4.0=py_0
-  - icu=58.2=hf484d3e_1000
-  - idna=2.8=py37_1000
-  - imageio=2.5.0=py37_0
-  - ipykernel=5.1.1=py37h24bf2e0_0
-  - ipython=7.5.0=py37h24bf2e0_0
+  - google-auth=1.10.0=py_0
+  - grpc-cpp=1.25.0=h213be95_2
+  - gst-plugins-base=1.14.5=h0935bb2_0
+  - gstreamer=1.14.5=h36ae1b5_0
+  - heapdict=1.0.1=py_0
+  - holoviews=1.12.7=py_0
+  - hvplot=0.5.2=py_0
+  - icc_rt=2018.0.2=0
+  - icu=64.2=he1b5a44_1
+  - idna=2.8=py36_1000
+  - idna_ssl=1.1.0=py36_1000
+  - imagecodecs-lite=2019.12.3=py36h516909a_0
+  - imageio=2.6.1=py36_0
+  - importlib_metadata=1.3.0=py36_0
+  - ipykernel=5.1.3=py36h5ca1d4c_0
+  - ipython=7.11.0=py36h5ca1d4c_0
   - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.4.2=py_0
-  - jedi=0.13.3=py37_0
-  - jinja2=2.10.1=py_0
+  - ipywidgets=7.5.1=py_0
+  - jedi=0.15.2=py36_0
+  - jinja2=2.10.3=py_0
   - jpeg=9c=h14c3975_1001
-  - jsonschema=3.0.1=py37_0
-  - jupyter=1.0.0=py_2
-  - jupyter_client=5.2.4=py_3
-  - jupyter_console=6.0.0=py_0
-  - jupyter_core=4.4.0=py_0
-  - jupyterlab=0.35.6=py37_0
-  - jupyterlab_server=0.2.0=py_0
-  - kiwisolver=1.1.0=py37hc9558a2_0
-  - libblas=3.8.0=10_openblas
-  - libcblas=3.8.0=10_openblas
+  - json5=0.8.5=py_0
+  - jsonschema=3.2.0=py36_0
+  - jupyter-server-proxy=1.2.0=py_0
+  - jupyter_client=5.3.3=py36_1
+  - jupyter_core=4.6.1=py36_0
+  - jupyterlab=1.2.4=py_0
+  - jupyterlab_server=1.0.6=py_0
+  - kiwisolver=1.1.0=py36hc9558a2_0
+  - kubernetes_asyncio=10.0.1=py_0
+  - libarchive=3.3.3=hc47fbbf_1007
+  - libblas=3.8.0=14_openblas
+  - libcblas=3.8.0=14_openblas
+  - libclang=9.0.0=default_hde54327_4
+  - libevent=2.1.10=h72c5cf5_0
   - libffi=3.2.1=he1b5a44_1006
-  - libgcc=7.2.0=h69d50b8_2
-  - libgcc-ng=8.2.0=hdf63c60_1
-  - libgfortran-ng=7.3.0=hdf63c60_0
+  - libgcc-ng=9.2.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_2
   - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=10_openblas
+  - liblapack=3.8.0=14_openblas
+  - liblief=0.9.0=hf8a498c_1
+  - libllvm8=8.0.1=hc9558a2_0
+  - libllvm9=9.0.0=hc9558a2_3
+  - libopenblas=0.3.7=h5ec1e0e_6
   - libpng=1.6.37=hed695b0_0
-  - libprotobuf=3.7.1=h8b12597_0
-  - libsodium=1.0.16=h14c3975_1001
-  - libstdcxx-ng=8.2.0=hdf63c60_1
-  - libtiff=4.0.10=h648cc4a_1001
+  - libprotobuf=3.11.0=h8b12597_0
+  - libsodium=1.0.17=h516909a_0
+  - libstdcxx-ng=9.2.0=hdf63c60_0
+  - libtiff=4.1.0=hc3755c2_1
   - libuuid=2.32.1=h14c3975_1000
+  - libuv=1.34.0=h516909a_0
   - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.9=h13577e0_0
-  - llvmlite=0.28.0=py37hdbcaa40_0
+  - libxkbcommon=0.9.1=hebb1f50_0
+  - libxml2=2.9.10=hee79883_0
+  - llvmlite=0.30.0=py36h8b12597_1
   - locket=0.2.0=py_2
   - lz4-c=1.8.3=he1b5a44_1001
-  - markupsafe=1.1.1=py37h14c3975_0
-  - matplotlib=3.1.0=py37_0
-  - matplotlib-base=3.1.0=py37h5f35d83_0
-  - mistune=0.8.4=py37h14c3975_1000
+  - lzo=2.10=h14c3975_1000
+  - markdown=3.1.1=py_0
+  - markupsafe=1.1.1=py36h516909a_0
+  - matplotlib=3.1.2=py36_1
+  - matplotlib-base=3.1.2=py36h250f245_1
+  - mistune=0.8.4=py36h516909a_1000
   - monotonic=1.5=py_0
-  - msgpack-python=0.6.1=py37h6bb024c_0
+  - more-itertools=8.0.2=py_0
+  - msgpack-python=0.6.2=py36hc9558a2_0
+  - multidict=4.6.1=py36h516909a_0
   - multipledispatch=0.6.0=py_0
-  - nbconvert=5.5.0=py_0
+  - nbconvert=5.6.1=py36_0
   - nbformat=4.4.0=py_1
   - ncurses=6.1=hf484d3e_1002
-  - networkx=2.3=py_0
-  - nodejs=9.11.1=0
-  - notebook=5.7.8=py37_0
-  - numba=0.43.1=py37hf2d7682_0
-  - numcodecs=0.6.3=py37hf484d3e_0
-  - numpy=1.16.3=py37he5ce36f_0
+  - networkx=2.4=py_0
+  - nodejs=11.14.0=he1b5a44_1
+  - notebook=6.0.1=py36_0
+  - nspr=4.24=he1b5a44_0
+  - nss=3.47=he751ad9_0
+  - numba=0.46.0=py36hb3f55d8_1
+  - numcodecs=0.6.4=py36he1b5a44_0
+  - numpy=1.17.3=py36h95a1406_0
   - numpy-indexed=0.3.5=py_1
+  - numpy_groupies=0.9.10=py_0
+  - oauthlib=3.0.1=py_0
   - olefile=0.46=py_0
-  - openblas=0.3.6=h6e990d7_2
-  - openssl=1.1.1b=h14c3975_1
-  - packaging=19.0=py_0
-  - pandas=0.24.2=py37hf484d3e_0
-  - pandoc=2.7.2=0
+  - openssl=1.1.1d=h516909a_0
+  - packaging=19.2=py_0
+  - pandas=0.25.3=py36hb3f55d8_0
+  - pandoc=2.9.1=0
   - pandocfilters=1.4.2=py_1
-  - panel=0.1.0a14=py_0
-  - param=1.9.1a2=py_0
+  - panel=0.7.0=py_0
+  - param=1.9.2=py_0
   - parquet-cpp=1.5.1=2
-  - parso=0.4.0=py_0
-  - partd=0.3.9=py_0
-  - pcre=8.41=hf484d3e_1003
+  - parso=0.5.2=py_0
+  - partd=1.1.0=py_0
+  - patchelf=0.10=he1b5a44_0
+  - pathlib=1.0.1=py36_1
+  - pcre=8.43=he1b5a44_0
   - peakutils=1.3.2=py_0
-  - pexpect=4.7.0=py37_0
-  - pickleshare=0.7.5=py37_1000
-  - pillow=6.0.0=py37he7afcd5_0
-  - pip=19.1=py37_0
-  - prometheus_client=0.6.0=py_0
-  - prompt_toolkit=2.0.9=py_0
-  - psutil=5.6.2=py37h516909a_0
+  - pexpect=4.7.0=py36_0
+  - pickleshare=0.7.5=py36_1000
+  - pillow=6.2.1=py36hd70f55b_1
+  - pims=0.4.1=py_1
+  - pip=19.3.1=py36_0
+  - pkginfo=1.5.0.1=py_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=3.0.2=py_0
+  - psutil=5.6.7=py36h516909a_0
   - pthread-stubs=0.4=h14c3975_1001
   - ptyprocess=0.6.0=py_1001
-  - pyarrow=0.13.0=py37h0978efd_0
-  - pycparser=2.19=py37_1
+  - py-lief=0.9.0=py36he1b5a44_1
+  - pyarrow=0.15.1=py36h8b68381_1
+  - pyasn1=0.4.8=py_0
+  - pyasn1-modules=0.2.7=py_0
+  - pycosat=0.6.3=py36h516909a_1002
+  - pycparser=2.19=py36_1
   - pyct=0.4.6=py_0
   - pyct-core=0.4.6=py_0
-  - pygments=2.4.0=py_0
-  - pyopenssl=19.0.0=py37_0
-  - pyparsing=2.4.0=py_0
-  - pyqt=5.9.2=py37hcca6a23_0
-  - pyrsistent=0.15.2=py37h516909a_0
-  - pysocks=1.7.0=py37_0
-  - python=3.7.3=h5b0a415_0
-  - python-dateutil=2.8.0=py_0
-  - pytz=2019.1=py_0
+  - pygments=2.5.2=py_0
+  - pyjwt=1.7.1=py_0
+  - pyopenssl=19.1.0=py36_0
+  - pyparsing=2.4.6=py_0
+  - pyqt=5.12.3=py36hcca6a23_1
+  - pyrsistent=0.15.6=py36h516909a_0
+  - pysocks=1.7.1=py36_0
+  - python=3.6.7=h357f687_1006
+  - python-dateutil=2.8.1=py_0
+  - python-kubernetes=10.0.1=py36_0
+  - python-libarchive-c=2.9=py36_0
+  - pytz=2019.3=py_0
   - pyviz_comms=0.7.2=py_0
-  - pywavelets=1.0.3=py37hd352d35_1
-  - pyyaml=5.1=py37h14c3975_0
-  - pyzmq=18.0.1=py37hc4ba49a_1
-  - qt=5.9.7=h52cfd70_1
-  - qtconsole=4.4.4=py_0
-  - re2=2019.04.01=he1b5a44_0
-  - readline=7.0=hf8c457e_1001
-  - requests=2.22.0=py37_0
-  - scikit-image=0.15.0=py37he1b5a44_0
-  - scipy=1.3.0=py37hab63836_0
+  - pywavelets=1.1.1=py36hc1659b7_0
+  - pyyaml=5.2=py36h516909a_0
+  - pyzmq=18.1.1=py36h1768529_0
+  - qt=5.12.5=hd8c4c69_1
+  - re2=2019.12.01=he1b5a44_0
+  - readline=8.0=hf8c457e_0
+  - requests=2.22.0=py36_1
+  - requests-oauthlib=1.2.0=py_0
+  - ripgrep=11.0.2=h516909a_3
+  - rsa=4.0=py_0
+  - ruamel_yaml=0.15.80=py36h516909a_1000
+  - scikit-image=0.16.2=py36hb3f55d8_0
+  - scipy=1.4.1=py36h921218d_0
   - send2trash=1.5.0=py_0
-  - setuptools=41.0.1=py37_0
-  - sip=4.19.8=py37hf484d3e_1000
-  - six=1.12.0=py37_1000
-  - snappy=1.1.7=hf484d3e_1002
+  - setuptools=42.0.2=py36_0
+  - simpervisor=0.3=py_1
+  - six=1.13.0=py36_0
+  - slicerator=1.0.0=py_0
+  - snappy=1.1.7=he1b5a44_1002
   - sortedcontainers=2.1.0=py_0
-  - sqlite=3.26.0=h67949de_1001
-  - tblib=1.4.0=py_0
-  - terminado=0.8.2=py37_0
-  - testpath=0.3.1=py37_1
-  - thrift-cpp=0.12.0=h0a07b25_1002
-  - tk=8.6.9=h84994c4_1001
-  - toolz=0.9.0=py_1
-  - tornado=6.0.2=py37h516909a_0
-  - tqdm=4.32.1=py_0
-  - traitlets=4.3.2=py37_1000
-  - urllib3=1.24.3=py37_0
+  - soupsieve=1.9.4=py36_0
+  - sqlite=3.30.1=hcee41ef_0
+  - tblib=1.6.0=py_0
+  - terminado=0.8.3=py36_0
+  - testpath=0.4.4=py_0
+  - thrift-cpp=0.12.0=hf3afdfd_1004
+  - tifffile=2019.7.26.2=py36_0
+  - tk=8.6.10=hed695b0_0
+  - toolz=0.10.0=py_0
+  - tornado=6.0.3=py36h516909a_0
+  - tqdm=4.41.0=py_0
+  - traitlets=4.3.3=py36_0
+  - typing_extensions=3.7.4.1=py36_0
+  - uriparser=0.9.3=he1b5a44_1
+  - urllib3=1.25.7=py36_0
   - wcwidth=0.1.7=py_1
   - webencodings=0.5.1=py_1
-  - wheel=0.33.4=py37_0
-  - widgetsnbextension=3.4.2=py37_1000
-  - wrapt=1.11.1=py37h516909a_0
-  - xarray=0.12.1=py_0
+  - websocket-client=0.56.0=py36_1
+  - wheel=0.33.6=py36_0
+  - widgetsnbextension=3.5.1=py36_0
+  - wrapt=1.11.2=py36h516909a_0
+  - xarray=0.14.1=py_1
+  - xmltodict=0.12.0=py_0
   - xorg-libxau=1.0.9=h14c3975_0
   - xorg-libxdmcp=1.1.3=h516909a_0
   - xz=5.2.4=h14c3975_1001
-  - yaml=0.1.7=h14c3975_1001
-  - zarr=2.3.1=py37_0
-  - zeromq=4.3.1=hf484d3e_1000
-  - zict=0.1.4=py_0
-  - zlib=1.2.11=h14c3975_1004
-  - zstd=1.3.3=1
+  - yaml=0.2.2=h516909a_1
+  - yarl=1.3.0=py36h516909a_1000
+  - zarr=2.3.2=py36_0
+  - zeromq=4.3.2=he1b5a44_2
+  - zict=1.0.0=py_0
+  - zipp=0.6.0=py_0
+  - zlib=1.2.11=h516909a_1006
+  - zstd=1.4.4=h3b9ef0a_1
   - pip:
-    - pims==0.4.1
-    - slicerator==1.0.0
-    - xmltodict==0.12.0
-prefix: /home/jqs1/miniconda3/envs/molecule-counting
+    - pyqt5-sip==4.19.18
+    - pyqtwebengine==5.12.1
 
