--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,8 +7,14 @@ repos:
     -   id: end-of-file-fixer
     -   id: mixed-line-ending
         args: ['--fix=lf']
+    -   id: trailing-whitespace
 -   repo: local
     hooks:
+    -   id: environment.yml
+        name: Remove prefix from environment.yml files
+        entry: ./fix-environment-files.sh
+        language: script
+        files: (^|/)environment\.(yml|yaml)$
     -   id: black
         name: Format .py files
         entry: black
