--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,10 @@ repos:
     -   id: mixed-line-ending
         args: ['--fix=lf']
     -   id: trailing-whitespace
+-   repo: https://github.com/psf/black
+    rev: stable
+    hooks:
+    -   id: black
 -   repo: local
     hooks:
     -   id: environment.yml
@@ -16,11 +20,6 @@ repos:
         entry: ./fix-environment-files.sh
         language: script
         files: (^|/)environment\.(yml|yaml)$
-    -   id: black
-        name: Format .py files
-        entry: black
-        language: system
-        types: [python]
     -   id: directory_tag
         name: Tag commit message with changed top-level directories
         entry: python ./directory_tag.py
