--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 default_stages: [commit]
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v2.5.0
     hooks:
     -   id: check-added-large-files
     -   id: check-merge-conflict
@@ -10,18 +10,15 @@ repos:
         args: ['--fix=lf']
     -   id: trailing-whitespace
 -   repo: https://github.com/psf/black
-    rev: stable
+    rev: 19.10b0
     hooks:
     -   id: black
--   repo: local
+-   repo: https://github.com/myint/docformatter.git
+    rev: v1.3.1
     hooks:
-    -   id: environment.yml
-        name: Remove prefix from environment.yml files
-        entry: ./fix-environment-files.sh
-        language: script
-        files: (^|/)environment\.(yml|yaml)$
-    -   id: directory_tag
-        name: Tag commit message with changed top-level directories
-        entry: python ./directory_tag.py
-        language: system
-        stages: [commit-msg]
+    -   id: docformatter
+-   repo: https://github.com/shenker/pre-commit-hooks.git
+    rev: 78768dc4839cae4938dffae6fb680a8d630bbbaf
+    hooks:
+    -   id: fix-environment-yamls
+    -   id: tag-directory
