[shenker/molecule-counting,molecule_counting] Moved shenker/molecule-counting to projects/molecule_counting (underscore so that it can be Python importable).

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,4 +22,5 @@ repos:
     hooks:
     -   id: fix-environment-yamls
     -   id: tag-directory
-        args: ['--prefix', 'paulssonlab/src/paulssonlab']
+        args: ['--prefix', 'paulssonlab/src/paulssonlab/projects',
+               '--prefix', 'paulssonlab/src/paulssonlab']
