--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/environment.yml
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/environment.yml
@@ -1,249 +1,35 @@
-name: molecule-counting
+name: molecule_counting
 channels:
-  - numba
   - http://conda.anaconda.org/gurobi
   - pyviz
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - adal=1.2.2=py_0
-  - aiohttp=3.6.2=py36h516909a_0
-  - arrow-cpp=0.15.1=py36h982ac2c_5
-  - asciitree=0.3.3=py_2
-  - async-timeout=3.0.1=py_1000
-  - attrs=19.3.0=py_0
-  - backcall=0.1.0=py_0
-  - beautifulsoup4=4.8.2=py36_0
-  - bleach=3.1.0=py_0
-  - blinker=1.4=py_1
-  - bokeh=1.4.0=py36_0
-  - boost-cpp=1.70.0=h8e57a91_2
-  - brotli=1.0.7=he1b5a44_1000
-  - bzip2=1.0.8=h516909a_2
-  - c-ares=1.15.0=h516909a_1001
-  - ca-certificates=2019.11.28=hecc5488_0
-  - cachetools=3.1.1=py_0
-  - certifi=2019.11.28=py36_0
-  - cffi=1.13.2=py36h8022711_0
-  - chardet=3.0.4=py36_1003
-  - click=7.0=py_0
-  - cloudpickle=1.2.2=py_1
-  - colorcet=2.0.2=py_0
-  - conda-build=3.18.11=py36_0
-  - conda-package-handling=1.6.0=py36h516909a_1
-  - conda=4.8.0=py36_1
-  - cryptography=2.8=py36h72c5cf5_1
-  - cycler=0.10.0=py_2
-  - cytoolz=0.10.1=py36h516909a_0
-  - dask-core=2.9.1=py_0
-  - dask-jobqueue=0.7.0=py_0
-  - dask-kubernetes=0.10.0=py_0
-  - dask=2.9.1=py_0
-  - datashader=0.9.0=py_0
-  - datashape=0.5.4=py_1
-  - dbus=1.13.6=he372182_0
-  - decorator=4.4.1=py_0
-  - defusedxml=0.6.0=py_0
-  - distributed=2.9.1=py_0
-  - double-conversion=3.1.5=he1b5a44_2
-  - entrypoints=0.3=py36_1000
-  - enum34=1.1.6=py36_1002
-  - expat=2.2.5=he1b5a44_1004
-  - fasteners=0.14.1=py_3
-  - filelock=3.0.10=py_0
-  - fontconfig=2.13.1=h86ecdb6_1001
-  - freetype=2.10.0=he983fc9_1
-  - fsspec=0.6.2=py_0
-  - future=0.18.2=py36_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - gflags=2.2.2=he1b5a44_1002
-  - glib=2.58.3=py36h6f030ca_1002
-  - glob2=0.7=py_0
-  - glog=0.4.0=he1b5a44_1
-  - google-auth=1.10.0=py_0
-  - grpc-cpp=1.25.0=h213be95_2
-  - gst-plugins-base=1.14.5=h0935bb2_0
-  - gstreamer=1.14.5=h36ae1b5_0
-  - heapdict=1.0.1=py_0
-  - holoviews=1.12.7=py_0
-  - hvplot=0.5.2=py_0
-  - icc_rt=2018.0.2=0
-  - icu=64.2=he1b5a44_1
-  - idna=2.8=py36_1000
-  - idna_ssl=1.1.0=py36_1000
-  - imagecodecs-lite=2019.12.3=py36h516909a_0
-  - imageio=2.6.1=py36_0
-  - importlib_metadata=1.3.0=py36_0
-  - ipykernel=5.1.3=py36h5ca1d4c_0
-  - ipython=7.11.0=py36h5ca1d4c_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=py_0
-  - jedi=0.15.2=py36_0
-  - jinja2=2.10.3=py_0
-  - jpeg=9c=h14c3975_1001
-  - json5=0.8.5=py_0
-  - jsonschema=3.2.0=py36_0
-  - jupyter-server-proxy=1.2.0=py_0
-  - jupyter_client=5.3.3=py36_1
-  - jupyter_core=4.6.1=py36_0
-  - jupyterlab=1.2.4=py_0
-  - jupyterlab_server=1.0.6=py_0
-  - kiwisolver=1.1.0=py36hc9558a2_0
-  - kubernetes_asyncio=10.0.1=py_0
-  - libarchive=3.3.3=hc47fbbf_1007
-  - libblas=3.8.0=14_openblas
-  - libcblas=3.8.0=14_openblas
-  - libclang=9.0.0=default_hde54327_4
-  - libevent=2.1.10=h72c5cf5_0
-  - libffi=3.2.1=he1b5a44_1006
-  - libgcc-ng=9.2.0=hdf63c60_0
-  - libgfortran-ng=7.3.0=hdf63c60_2
-  - libiconv=1.15=h516909a_1005
-  - liblapack=3.8.0=14_openblas
-  - liblief=0.9.0=hf8a498c_1
-  - libllvm8=8.0.1=hc9558a2_0
-  - libllvm9=9.0.0=hc9558a2_3
-  - libopenblas=0.3.7=h5ec1e0e_6
-  - libpng=1.6.37=hed695b0_0
-  - libprotobuf=3.11.0=h8b12597_0
-  - libsodium=1.0.17=h516909a_0
-  - libstdcxx-ng=9.2.0=hdf63c60_0
-  - libtiff=4.1.0=hc3755c2_1
-  - libuuid=2.32.1=h14c3975_1000
-  - libuv=1.34.0=h516909a_0
-  - libxcb=1.13=h14c3975_1002
-  - libxkbcommon=0.9.1=hebb1f50_0
-  - libxml2=2.9.10=hee79883_0
-  - llvmlite=0.30.0=py36h8b12597_1
-  - locket=0.2.0=py_2
-  - lz4-c=1.8.3=he1b5a44_1001
-  - lzo=2.10=h14c3975_1000
-  - markdown=3.1.1=py_0
-  - markupsafe=1.1.1=py36h516909a_0
-  - matplotlib-base=3.1.2=py36h250f245_1
-  - matplotlib=3.1.2=py36_1
-  - mistune=0.8.4=py36h516909a_1000
-  - monotonic=1.5=py_0
-  - more-itertools=8.0.2=py_0
-  - msgpack-python=0.6.2=py36hc9558a2_0
-  - multidict=4.6.1=py36h516909a_0
-  - multipledispatch=0.6.0=py_0
-  - nbconvert=5.6.1=py36_0
-  - nbformat=4.4.0=py_1
-  - ncurses=6.1=hf484d3e_1002
-  - networkx=2.4=py_0
-  - nodejs=11.14.0=he1b5a44_1
-  - notebook=6.0.1=py36_0
-  - nspr=4.24=he1b5a44_0
-  - nss=3.47=he751ad9_0
-  - numba=0.46.0=py36hb3f55d8_1
-  - numcodecs=0.6.4=py36he1b5a44_0
-  - numpy-indexed=0.3.5=py_1
-  - numpy=1.17.3=py36h95a1406_0
-  - numpy_groupies=0.9.10=py_0
-  - oauthlib=3.0.1=py_0
-  - olefile=0.46=py_0
-  - openssl=1.1.1d=h516909a_0
-  - packaging=19.2=py_0
-  - pandas=0.25.3=py36hb3f55d8_0
-  - pandoc=2.9.1=0
-  - pandocfilters=1.4.2=py_1
-  - panel=0.7.0=py_0
-  - param=1.9.2=py_0
-  - parquet-cpp=1.5.1=2
-  - parso=0.5.2=py_0
-  - partd=1.1.0=py_0
-  - patchelf=0.10=he1b5a44_0
-  - pathlib=1.0.1=py36_1
-  - pcre=8.43=he1b5a44_0
-  - peakutils=1.3.2=py_0
-  - pexpect=4.7.0=py36_0
-  - pickleshare=0.7.5=py36_1000
-  - pillow=6.2.1=py36hd70f55b_1
-  - pims=0.4.1=py_1
-  - pip:
-      - pyqt5-sip==4.19.18
-      - pyqtwebengine==5.12.1
-  - pip=19.3.1=py36_0
-  - pkginfo=1.5.0.1=py_0
-  - prometheus_client=0.7.1=py_0
-  - prompt_toolkit=3.0.2=py_0
-  - psutil=5.6.7=py36h516909a_0
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
-  - py-lief=0.9.0=py36he1b5a44_1
-  - pyarrow=0.15.1=py36h8b68381_1
-  - pyasn1-modules=0.2.7=py_0
-  - pyasn1=0.4.8=py_0
-  - pycosat=0.6.3=py36h516909a_1002
-  - pycparser=2.19=py36_1
-  - pyct-core=0.4.6=py_0
-  - pyct=0.4.6=py_0
-  - pygments=2.5.2=py_0
-  - pyjwt=1.7.1=py_0
-  - pyopenssl=19.1.0=py36_0
-  - pyparsing=2.4.6=py_0
-  - pyqt=5.12.3=py36hcca6a23_1
-  - pyrsistent=0.15.6=py36h516909a_0
-  - pysocks=1.7.1=py36_0
-  - python-dateutil=2.8.1=py_0
-  - python-kubernetes=10.0.1=py36_0
-  - python-libarchive-c=2.9=py36_0
-  - python=3.6.7=h357f687_1006
-  - pytz=2019.3=py_0
-  - pyviz_comms=0.7.2=py_0
-  - pywavelets=1.1.1=py36hc1659b7_0
-  - pyyaml=5.2=py36h516909a_0
-  - pyzmq=18.1.1=py36h1768529_0
-  - qt=5.12.5=hd8c4c69_1
-  - re2=2019.12.01=he1b5a44_0
-  - readline=8.0=hf8c457e_0
-  - requests-oauthlib=1.2.0=py_0
-  - requests=2.22.0=py36_1
-  - ripgrep=11.0.2=h516909a_3
-  - rsa=4.0=py_0
-  - ruamel_yaml=0.15.80=py36h516909a_1000
-  - scikit-image=0.16.2=py36hb3f55d8_0
-  - scipy=1.4.1=py36h921218d_0
-  - send2trash=1.5.0=py_0
-  - setuptools=42.0.2=py36_0
-  - simpervisor=0.3=py_1
-  - six=1.13.0=py36_0
-  - slicerator=1.0.0=py_0
-  - snappy=1.1.7=he1b5a44_1002
-  - sortedcontainers=2.1.0=py_0
-  - soupsieve=1.9.4=py36_0
-  - sqlite=3.30.1=hcee41ef_0
-  - tblib=1.6.0=py_0
-  - terminado=0.8.3=py36_0
-  - testpath=0.4.4=py_0
-  - thrift-cpp=0.12.0=hf3afdfd_1004
-  - tifffile=2019.7.26.2=py36_0
-  - tk=8.6.10=hed695b0_0
-  - toolz=0.10.0=py_0
-  - tornado=6.0.3=py36h516909a_0
-  - tqdm=4.41.0=py_0
-  - traitlets=4.3.3=py36_0
-  - typing_extensions=3.7.4.1=py36_0
-  - uriparser=0.9.3=he1b5a44_1
-  - urllib3=1.25.7=py36_0
-  - wcwidth=0.1.7=py_1
-  - webencodings=0.5.1=py_1
-  - websocket-client=0.56.0=py36_1
-  - wheel=0.33.6=py36_0
-  - widgetsnbextension=3.5.1=py36_0
-  - wrapt=1.11.2=py36h516909a_0
-  - xarray=0.14.1=py_1
-  - xmltodict=0.12.0=py_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xz=5.2.4=h14c3975_1001
-  - yaml=0.2.2=h516909a_1
-  - yarl=1.3.0=py36h516909a_1000
-  - zarr=2.3.2=py36_0
-  - zeromq=4.3.2=he1b5a44_2
-  - zict=1.0.0=py_0
-  - zipp=0.6.0=py_0
-  - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h3b9ef0a_1
+  - black
+  - bokeh
+  - cachetools
+  - click
+  - cytoolz
+  - dask
+  - dask-jobqueue
+  - datashader
+  - distributed
+  - holoviews
+  - hvplot
+  - jupyterlab
+  - matplotlib
+  - nbformat
+  - nd2reader
+  - nodejs
+  - numpy
+  - numpy-indexed
+  - numpy_groupies
+  - pandas
+  - panel
+  - peakutils
+  - pre-commit
+  - pyarrow
+  - scikit-image
+  - scipy
+  - seaborn
+  - zarr
