.gitignore for paulssonlab.shenker.cloning config.toml.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # config files
 /paulssonlab/src/paulssonlab/cloning/config.toml
+/paulssonlab/src/paulssonlab/shenker/cloning/config.toml
 
 # direnv
 .envrc
