--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -24,6 +24,7 @@ dependencies:
       - primer3-py
       - primer3plus
       - requests-html
+      - pygsheets
   - pre-commit
   - pytoml
   - requests
