Add docformatter/pre-commit to every environment.yml since the latest nbcleanse requires docformatter.

--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -26,6 +26,7 @@ dependencies:
       - primer3plus
       - requests-html
       - pygsheets
+      - docformatter
   - pre-commit
   - pytoml
   - requests
