--- a/paulssonlab/src/paulssonlab/projects/fp_aggregation/environment.yml
+++ b/paulssonlab/src/paulssonlab/projects/fp_aggregation/environment.yml
@@ -22,6 +22,9 @@ dependencies:
   - nodejs
   - numpy
   - pandas
+  - pip
+  - pip:
+      - docformatter
   - pre-commit
   - scikit-image
   - scipy
