--- a/paulssonlab/src/paulssonlab/shenker/lab_helper/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/lab_helper/environment.yml
@@ -16,6 +16,9 @@ dependencies:
   - nbformat
   - numpy
   - pandas
+  - pip
+  - pip:
+      - docformatter
   - pre-commit
   - pytoml
   - requests
