[bin] initenv script and related tooling to make conda env management automatic.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # snakenbake fonts
 /paulssonlab/src/paulssonlab/shenker/snakenbake/ttf-bitstream-vera-1.10
 
+# direnv/conda
+.envname
+
 # config files
 /paulssonlab/src/paulssonlab/cloning/config.toml
 /paulssonlab/src/paulssonlab/shenker/cloning/config.toml
 /paulssonlab/src/paulssonlab/shenker/cloning/credentials.json
-
-# direnv
-.envrc
 
 # GDS files
 *.gds
