--- a/paulssonlab/src/paulssonlab/inventory/environment.yml
+++ b/paulssonlab/src/paulssonlab/inventory/environment.yml
@@ -6,10 +6,18 @@ channels:
 dependencies:
   - apsw
   - black
+  - bokeh
   - cachetools
   - click
+  - holoviews
+  - hvplot
+  - ipywidgets
+  - jupyterlab
+  - matplotlib
   - nbformat
+  - nodejs
   - numpy
+  - pandas
   - peewee
   - pip
   - pip:
