Added jupyterlab_code_formatter to default packages list.

--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - cytoolz
   - google-api-python-client
   - jupyterlab
+  - jupyterlab_code_formatter
   - mafft
   - nbformat
   - nodejs
