--- a/paulssonlab/src/paulssonlab/shenker/lab_helper/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/lab_helper/environment.yml
@@ -5,12 +5,14 @@ channels:
   - defaults
 dependencies:
   - black
+  - bokeh
   - cachetools
   - click
   - cytoolz
   - google-api-python-client
   - holoviews
   - jupyterlab
+  - jupyterlab_code_formatter
   - nbformat
   - nodejs
   - numpy
