--- a/paulssonlab/src/paulssonlab/projects/molecule_counting/environment.yml
+++ b/paulssonlab/src/paulssonlab/projects/molecule_counting/environment.yml
@@ -18,6 +18,7 @@ dependencies:
   - hvplot
   - ipywidgets
   - jupyterlab
+  - jupyterlab_code_formatter
   - matplotlib
   - nbformat
   - nd2reader
