[cloning,shenker] WIP cloning webhook using Google Cloud Run.

--- a/paulssonlab/src/paulssonlab/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/cloning/environment.yml
@@ -12,6 +12,7 @@ dependencies:
   - clustalo
   - cytoolz
   - google-api-python-client
+  - google-cloud-sdk
   - jupyterlab
   - jupyterlab_code_formatter
   - mafft
