--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/environment.yml
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/environment.yml
@@ -1,256 +1,40 @@
-name: new_trenchripper
+name: trenchripper
 channels:
-  - pytorch
-  - pyviz
   - conda-forge
+  - pytorch
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=1_llvm
-  - appdirs=1.4.3=py_1
-  - attrs=19.3.0=py_0
-  - backcall=0.1.0=py_0
-  - black=19.10b0=py38_0
-  - blas=2.15=mkl
-  - bleach=3.1.5=pyh9f0ad1d_0
-  - blosc=1.18.1=he1b5a44_0
-  - bokeh=2.0.1=py38h32f6830_0
-  - brotlipy=0.7.0=py38h1e0a361_1000
-  - bzip2=1.0.8=h516909a_2
-  - ca-certificates=2020.4.5.1=hecc5488_0
-  - cachetools=4.1.0=py_1
-  - cairo=1.16.0=hcf35c78_1003
-  - certifi=2020.4.5.1=py38h32f6830_0
-  - cffi=1.14.0=py38hd463f26_0
-  - cfgv=3.1.0=py_0
-  - chardet=3.0.4=py38h32f6830_1006
-  - click=7.1.2=pyh9f0ad1d_0
-  - cloudpickle=1.4.1=py_0
-  - colorcet=2.0.2=py_0
-  - cryptography=2.9.2=py38h766eaa4_0
-  - cudatoolkit=10.2.89=hfd86e86_1
-  - cycler=0.10.0=py_2
-  - cytoolz=0.10.1=py38h516909a_0
-  - dask-core=2.17.2=py_0
-  - dask-jobqueue=0.7.1=py_0
-  - dask=2.17.2=py_0
-  - datashader=0.10.0=py_0
-  - datashape=0.5.4=py_1
-  - dbus=1.13.6=he372182_0
-  - decorator=4.4.2=py_0
-  - defusedxml=0.6.0=py_0
-  - distlib=0.3.0=pyh9f0ad1d_0
-  - distributed=2.17.0=py38h32f6830_0
-  - editdistance=0.5.3=py38h950e882_0
-  - entrypoints=0.3=py38h32f6830_1001
-  - expat=2.2.9=he1b5a44_2
-  - fastparquet=0.4.0=py38h8790de6_0
-  - ffmpeg=4.2.3=h167e202_0
-  - filelock=3.0.12=pyh9f0ad1d_0
-  - fontconfig=2.13.1=h86ecdb6_1001
-  - freetype=2.10.2=he06d7ca_0
-  - fsspec=0.7.4=py_0
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - giflib=5.2.1=h516909a_2
-  - glib=2.64.3=h6f030ca_0
-  - gmp=6.2.0=he1b5a44_2
-  - gnutls=3.6.13=h79a8f9a_0
-  - graphite2=1.3.13=he1b5a44_1001
-  - gst-plugins-base=1.14.5=h0935bb2_2
-  - gstreamer=1.14.5=h36ae1b5_2
-  - h5py=2.10.0=nompi_py38h513d04c_102
-  - harfbuzz=2.4.0=h9f30f68_3
-  - hdf5=1.10.5=nompi_h3c11f04_1104
-  - heapdict=1.0.1=py_0
-  - holoviews=1.13.2=py_0
-  - icu=64.2=he1b5a44_1
-  - identify=1.4.17=pyh9f0ad1d_0
-  - idna=2.9=py_1
-  - imagecodecs-lite=2019.12.3=py38h8790de6_1
-  - imageio=2.8.0=py_0
-  - importlib-metadata=1.6.0=py38h32f6830_0
-  - importlib_metadata=1.6.0=0
-  - ipykernel=5.3.0=py38h23f93f0_0
-  - ipython=7.15.0=py38h32f6830_0
-  - ipython_genutils=0.2.0=py_1
-  - ipywidgets=7.5.1=py_0
-  - jasper=1.900.1=h07fcdf6_1006
-  - jedi=0.17.0=py38h32f6830_0
-  - jinja2=2.11.2=pyh9f0ad1d_0
-  - joblib=0.15.1=py_0
-  - jpeg=9d=h516909a_0
-  - json5=0.9.0=py_0
-  - jsonschema=3.2.0=py38h32f6830_1
-  - jupyter_client=6.1.3=py_0
-  - jupyter_core=4.6.3=py38h32f6830_1
-  - jupyterlab=2.1.4=py_0
-  - jupyterlab_server=1.1.5=py_0
-  - kiwisolver=1.2.0=py38hbf85e49_0
-  - lame=3.100=h14c3975_1001
-  - ld_impl_linux-64=2.34=h53a641e_4
-  - libblas=3.8.0=15_mkl
-  - libcblas=3.8.0=15_mkl
-  - libclang=9.0.1=default_hde54327_0
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.2.0=h24d8f2e_2
-  - libgfortran-ng=7.5.0=hdf63c60_6
-  - libgomp=9.2.0=h24d8f2e_2
-  - libiconv=1.15=h516909a_1006
-  - liblapack=3.8.0=15_mkl
-  - liblapacke=3.8.0=15_mkl
-  - libllvm8=8.0.1=hc9558a2_0
-  - libllvm9=9.0.1=he513fc3_1
-  - libopenblas=0.3.7=h5ec1e0e_6
-  - libopencv=4.2.0=py38_5
-  - libpng=1.6.37=hed695b0_1
-  - libsodium=1.0.17=h516909a_0
-  - libstdcxx-ng=9.2.0=hdf63c60_2
-  - libtiff=4.1.0=hc3755c2_3
-  - libuuid=2.32.1=h14c3975_1000
-  - libuv=1.34.0=h516909a_0
-  - libwebp=1.0.2=h56121f0_5
-  - libxcb=1.13=h14c3975_1002
-  - libxkbcommon=0.10.0=he1b5a44_0
-  - libxml2=2.9.10=hee79883_0
-  - llvm-openmp=10.0.0=hc9558a2_0
-  - llvmlite=0.32.0=py38h4f45e52_0
-  - locket=0.2.0=py_2
-  - lz4-c=1.9.2=he1b5a44_1
-  - lzo=2.10=h14c3975_1000
-  - markdown=3.2.2=py_0
-  - markupsafe=1.1.1=py38h1e0a361_1
-  - matplotlib-base=3.2.1=py38h2af1d28_0
-  - matplotlib=3.2.1=0
-  - mistune=0.8.4=py38h1e0a361_1001
-  - mkl=2020.1=219
-  - mock=4.0.2=py38h32f6830_0
-  - msgpack-python=1.0.0=py38hbf85e49_1
-  - multipledispatch=0.6.0=py_0
-  - mypy_extensions=0.4.3=py38h32f6830_1
-  - nbconvert=5.6.1=py38h32f6830_1
-  - nbformat=5.0.6=py_0
-  - ncurses=6.1=hf484d3e_1002
-  - nd2reader=3.2.3=py_2
-  - nettle=3.4.1=h1bed415_1002
-  - networkx=2.4=py_1
-  - ninja=1.10.0=hc9558a2_0
-  - nodeenv=1.3.5=py_0
-  - nodejs=13.13.0=hf5d1a2b_0
-  - notebook=6.0.3=py38h32f6830_0
-  - nspr=4.25=he1b5a44_0
-  - nss=3.47=he751ad9_0
-  - numba=0.49.1=py38hcb8c335_0
-  - numexpr=2.7.1=py38hcb8c335_1
-  - numpy=1.17.5=py38h95a1406_0
-  - olefile=0.46=py_0
-  - opencv=4.2.0=py38_5
-  - openh264=2.1.1=h8b12597_0
-  - openssl=1.1.1g=h516909a_0
-  - packaging=20.4=pyh9f0ad1d_0
-  - pandas=1.0.4=py38hcb8c335_0
-  - pandoc=2.9.2.1=0
-  - pandocfilters=1.4.2=py_1
-  - panel=0.9.5=py_0
-  - param=1.9.3=py_0
-  - parse=1.14.0=py_0
-  - parso=0.7.0=pyh9f0ad1d_0
-  - partd=1.1.0=py_0
-  - pathspec=0.8.0=pyh9f0ad1d_0
-  - patsy=0.5.1=py_0
-  - pcre=8.44=he1b5a44_0
-  - pexpect=4.8.0=py38h32f6830_1
-  - pickleshare=0.7.5=py38h32f6830_1001
-  - pillow=7.1.2=py38h9776b28_0
-  - pims=0.4.1=py_1
+  - bokeh
+  - cudatoolkit=10.2
+  - dask
+  - dask-jobqueue
+  - datashader
+  - distributed
+  - fastparquet
+  - h5py
+  - holoviews
+  - imgaug
+  - ipympl
+  - ipywidgets
+  - jupyterlab
+  - line_profiler
+  - matplotlib
+  - nd2reader
+  - nodejs
+  - numpy
+  - pandas
+  - pip
   - pip:
-      - h5py-cache==1.0
-      - pulp==2.1
-      - pyqt5-sip==4.19.18
-      - pyqtchart==5.12
-      - pyqtwebengine==5.12.1
-  - pip=20.1.1=py_1
-  - pixman=0.38.0=h516909a_1003
-  - pre-commit=2.4.0=py38h32f6830_1
-  - prometheus_client=0.8.0=pyh9f0ad1d_0
-  - prompt-toolkit=3.0.5=py_0
-  - psutil=5.7.0=py38h1e0a361_1
-  - pthread-stubs=0.4=h14c3975_1001
-  - ptyprocess=0.6.0=py_1001
-  - py-opencv=4.2.0=py38h23f93f0_5
-  - pycparser=2.20=py_0
-  - pyct-core=0.4.6=py_0
-  - pyct=0.4.6=py_0
-  - pygments=2.6.1=py_0
-  - pyopenssl=19.1.0=py_1
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyqt=5.12.3=py38ha8c2ead_3
-  - pyrsistent=0.16.0=py38h1e0a361_0
-  - pysocks=1.7.1=py38h32f6830_1
-  - pytables=3.6.1=py38h9f153d1_1
-  - python-dateutil=2.8.1=py_0
-  - python=3.8.3=cpython_he5300dc_0
-  - python_abi=3.8=1_cp38
-  - pytorch=1.5.0=py3.8_cuda10.2.89_cudnn7.6.5_0
-  - pytz=2020.1=pyh9f0ad1d_0
-  - pyviz_comms=0.7.4=py_0
-  - pywavelets=1.1.1=py38h8790de6_1
-  - pyyaml=5.3.1=py38h1e0a361_0
-  - pyzmq=19.0.1=py38ha71036d_0
-  - qgrid=1.1.1=py38_1001
-  - qt=5.12.5=hd8c4c69_1
-  - readline=8.0=hf8c457e_0
-  - regex=2020.5.14=py38h1e0a361_0
-  - requests=2.23.0=pyh8c360ce_2
-  - scikit-image=0.17.2=py38hcb8c335_0
-  - scikit-learn=0.23.1=py38h3a94b23_0
-  - scipy=1.4.1=py38h18bccfc_3
-  - seaborn=0.10.1=py_0
-  - send2trash=1.5.0=py_0
-  - setuptools=47.1.1=py38h32f6830_0
-  - six=1.15.0=pyh9f0ad1d_0
-  - slicerator=1.0.0=py_0
-  - sortedcontainers=2.1.0=py_0
-  - sqlite=3.30.1=hcee41ef_0
-  - statsmodels=0.11.1=py38h1e0a361_1
-  - tblib=1.6.0=py_0
-  - terminado=0.8.3=py38h32f6830_1
-  - testpath=0.4.4=py_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - thrift=0.11.0=py38he1b5a44_1001
-  - tifffile=2020.5.30=py_0
-  - tk=8.6.10=hed695b0_0
-  - toml=0.10.1=pyh9f0ad1d_0
-  - toolz=0.10.0=py_0
-  - torchvision=0.6.0=py38_cu102
-  - tornado=6.0.4=py38h1e0a361_1
-  - tqdm=4.46.0=pyh9f0ad1d_0
-  - traitlets=4.3.3=py38h32f6830_1
-  - typed-ast=1.4.1=py38h516909a_0
-  - typing_extensions=3.7.4.2=py_0
-  - urllib3=1.25.9=py_0
-  - virtualenv=20.0.20=py38h32f6830_1
-  - wcwidth=0.2.2=pyh9f0ad1d_0
-  - webencodings=0.5.1=py_1
-  - wheel=0.34.2=py_1
-  - widgetsnbextension=3.5.1=py38_0
-  - x264=1!152.20180806=h14c3975_0
-  - xarray=0.15.1=py_0
-  - xmltodict=0.12.0=py_0
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.9=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
-  - xz=5.2.5=h516909a_0
-  - yaml=0.2.5=h516909a_0
-  - zeromq=4.3.2=he1b5a44_2
-  - zict=2.0.0=py_0
-  - zipp=3.1.0=py_0
-  - zlib=1.2.11=h516909a_1006
-  - zstd=1.4.4=h6597ccf_3
+      - pulp
+      - parse
+      - h5py-cache
+  - pytables
+  - python=3.8.5
+  - pytorch
+  - qgrid
+  - scikit-image
+  - scikit-learn
+  - scipy
+  - seaborn
+  - tifffile
+  - torchvision
