[shenker/snakenbake] draw_grid_overlay works with multiple offsets, get_grid_metadata returns either one or two offsets (sufficient to handle snake chips with regular lane spacing), get_fov_coverage can start on even or odd trench set (draw_grid_overlay currently ignores skip_first).

--- a/paulssonlab/src/paulssonlab/shenker/snakenbake/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/snakenbake/environment.yml
@@ -6,7 +6,6 @@ dependencies:
   - bitarray
   - black
   - cachetools
-  - click
   - cytoolz
   - freetype
   - freetype-py
@@ -15,6 +14,7 @@ dependencies:
   - matplotlib
   - nbformat
   - numpy
+  - pandas
   - pint
   - pip
   - pip:
