[shenker/cloning,api] WIP benchling sync update-in-place. Preparing to add mtime handling, so that updates are only done if mtime on a gdrive plasmid map changes.

--- a/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
+++ b/paulssonlab/src/paulssonlab/shenker/cloning/environment.yml
@@ -17,7 +17,8 @@ dependencies:
   - holoviews
   - hvplot
   - ipywidgets
-  - jupyterlab
+  - jsondiff
+  - jupyterlab>=2.0.0,<3
   - jupyterlab_code_formatter
   - mafft
   - matplotlib
